[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/papertex.png" type="Texture" id=1]
[ext_resource path="res://resources/settings.tres" type="Theme" id=2]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=3]
[ext_resource path="res://sprites/Icons/64x64px/close.png" type="Texture" id=4]
[ext_resource path="res://nodes/components/ProgressSlider.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/textiletex.png" type="Texture" id=6]
[ext_resource path="res://nodes/components/ItemButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/Icons/128x128px/floppy-disk.png" type="Texture" id=8]
[ext_resource path="res://scripts/animate/NodeAnimated.gd" type="Script" id=9]
[ext_resource path="res://sprites/BG/9rectPanel.png" type="Texture" id=10]
[ext_resource path="res://sprites/Icons/64x64px/tap.png" type="Texture" id=11]
[ext_resource path="res://sprites/Icons/64x64px/music.png" type="Texture" id=12]
[ext_resource path="res://sprites/Icons/64x64px/raincloud.png" type="Texture" id=13]
[ext_resource path="res://sprites/BG/IconRectBW.png" type="Texture" id=14]

[node name="InGSettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0.8, 0.8, 0.752941, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
self_modulate = Color( 0.454902, 0.109804, 0.109804, 1 )
anchor_right = 1.0
margin_bottom = 128.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 2

[node name="ExitButton" type="TextureButton" parent="TextureRect"]
margin_left = 24.0
margin_top = 24.0
margin_right = 88.0
margin_bottom = 88.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="TextureRect"]
anchor_right = 1.0
margin_top = 32.0
margin_bottom = 94.0
text = "Settings"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 128.0
margin_right = -64.0

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/ScrollContainer"]
margin_left = 186.0
margin_right = 954.0
margin_bottom = 2132.0
rect_min_size = Vector2( 768, 0 )
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="Debug" type="VBoxContainer" parent="TextureRect/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 768.0
margin_bottom = 692.0

[node name="Data" type="VBoxContainer" parent="TextureRect/ScrollContainer/VBoxContainer/Debug"]
unique_name_in_owner = true
margin_right = 768.0
margin_bottom = 272.0

[node name="Label" type="Label" parent="TextureRect/ScrollContainer/VBoxContainer/Debug/Data"]
margin_right = 768.0
margin_bottom = 56.0
theme_type_variation = "SubMenu"
text = "Data"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/ScrollContainer/VBoxContainer/Debug/Data"]
margin_top = 60.0
margin_right = 768.0
margin_bottom = 252.0
custom_constants/separation = 64
alignment = 1

[node name="Save" type="VBoxContainer" parent="TextureRect/ScrollContainer/VBoxContainer/Debug/Data/HBoxContainer"]
margin_left = 208.0
margin_right = 352.0
margin_bottom = 192.0

[node name="SaveButton" parent="TextureRect/ScrollContainer/VBoxContainer/Debug/Data/HBoxContainer/Save" instance=ExtResource( 7 )]
unique_name_in_owner = true
icon = ExtResource( 8 )

[node name="Label" type="Label" parent="TextureRect/ScrollContainer/VBoxContainer/Debug/Data/HBoxContainer/Save"]
margin_top = 148.0
margin_right = 144.0
margin_bottom = 192.0
theme_type_variation = "MenuItem"
text = "Save"
align = 1

[node name="Load" type="VBoxContainer" parent="TextureRect/ScrollContainer/VBoxContainer/Debug/Data/HBoxContainer"]
margin_left = 416.0
margin_right = 560.0
margin_bottom = 192.0

[node name="LoadButton" parent="TextureRect/ScrollContainer/VBoxContainer/Debug/Data/HBoxContainer/Load" instance=ExtResource( 7 )]
unique_name_in_owner = true
modulate = Color( 0, 0.427451, 1, 1 )
icon = ExtResource( 8 )

[node name="Label" type="Label" parent="TextureRect/ScrollContainer/VBoxContainer/Debug/Data/HBoxContainer/Load"]
margin_top = 148.0
margin_right = 144.0
margin_bottom = 192.0
theme_type_variation = "MenuItem"
text = "Load"
align = 1

[node name="HSeparator" type="HSeparator" parent="TextureRect/ScrollContainer/VBoxContainer/Debug/Data"]
margin_top = 256.0
margin_right = 768.0
margin_bottom = 272.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TextureRect/ScrollContainer/VBoxContainer/Debug"]
margin_top = 276.0
margin_right = 768.0
margin_bottom = 332.0
theme_type_variation = "SubMenu"
text = "Debug"
align = 1

[node name="CheckButton" type="CheckButton" parent="TextureRect/ScrollContainer/VBoxContainer/Debug"]
margin_top = 336.0
margin_right = 768.0
margin_bottom = 472.0
focus_mode = 0
theme_type_variation = "MenuItem"
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Enable"
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/ScrollContainer/VBoxContainer/Debug"]
margin_top = 476.0
margin_right = 768.0
margin_bottom = 572.0
alignment = 2

[node name="Label" type="Label" parent="TextureRect/ScrollContainer/VBoxContainer/Debug/HBoxContainer"]
margin_left = 431.0
margin_top = 26.0
margin_right = 668.0
margin_bottom = 70.0
theme_type_variation = "MenuItem"
text = "Delete Save File"
align = 1

[node name="DeleteSaveButton" type="TextureButton" parent="TextureRect/ScrollContainer/VBoxContainer/Debug/HBoxContainer"]
unique_name_in_owner = true
margin_left = 672.0
margin_right = 768.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = ExtResource( 8 )
expand = true
script = ExtResource( 9 )

[node name="HBoxContainer2" type="HBoxContainer" parent="TextureRect/ScrollContainer/VBoxContainer/Debug"]
margin_top = 576.0
margin_right = 768.0
margin_bottom = 672.0
alignment = 2

[node name="Label" type="Label" parent="TextureRect/ScrollContainer/VBoxContainer/Debug/HBoxContainer2"]
margin_left = 451.0
margin_top = 26.0
margin_right = 668.0
margin_bottom = 70.0
theme_type_variation = "MenuItem"
text = "Purge All Data"
align = 1

[node name="PurgeDataButton" type="TextureButton" parent="TextureRect/ScrollContainer/VBoxContainer/Debug/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 672.0
margin_right = 768.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = ExtResource( 8 )
expand = true
script = ExtResource( 9 )

[node name="HSeparator" type="HSeparator" parent="TextureRect/ScrollContainer/VBoxContainer/Debug"]
margin_top = 676.0
margin_right = 768.0
margin_bottom = 692.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Sound" type="VBoxContainer" parent="TextureRect/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 696.0
margin_right = 768.0
margin_bottom = 1148.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TextureRect/ScrollContainer/VBoxContainer/Sound"]
margin_right = 768.0
margin_bottom = 56.0
theme_type_variation = "SubMenu"
text = "Sound"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Label4" type="Label" parent="TextureRect/ScrollContainer/VBoxContainer/Sound"]
margin_top = 60.0
margin_right = 768.0
margin_bottom = 104.0
theme_type_variation = "MenuItem"
text = "SFX"
align = 1

[node name="SFX" type="HBoxContainer" parent="TextureRect/ScrollContainer/VBoxContainer/Sound"]
margin_top = 108.0
margin_right = 768.0
margin_bottom = 188.0

[node name="BG" type="NinePatchRect" parent="TextureRect/ScrollContainer/VBoxContainer/Sound/SFX"]
modulate = Color( 0.0313726, 1, 0, 1 )
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="SFXButton" type="Button" parent="TextureRect/ScrollContainer/VBoxContainer/Sound/SFX/BG"]
anchor_right = 1.0
anchor_bottom = 1.0
icon = ExtResource( 11 )
flat = true

[node name="ProgressSlider" parent="TextureRect/ScrollContainer/VBoxContainer/Sound/SFX" instance=ExtResource( 5 )]
margin_left = 84.0
margin_top = 0.0
margin_right = 768.0
margin_bottom = 80.0
min_value = -40.0
max_value = 0.0
step = 1.0
value = -10.0
rounded = true

[node name="Label3" type="Label" parent="TextureRect/ScrollContainer/VBoxContainer/Sound"]
margin_top = 192.0
margin_right = 768.0
margin_bottom = 236.0
theme_type_variation = "MenuItem"
text = "Music"
align = 1

[node name="Music" type="HBoxContainer" parent="TextureRect/ScrollContainer/VBoxContainer/Sound"]
margin_top = 240.0
margin_right = 768.0
margin_bottom = 320.0

[node name="BG" type="NinePatchRect" parent="TextureRect/ScrollContainer/VBoxContainer/Sound/Music"]
modulate = Color( 0.0313726, 1, 0, 1 )
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MusicButton" type="Button" parent="TextureRect/ScrollContainer/VBoxContainer/Sound/Music/BG"]
anchor_right = 1.0
anchor_bottom = 1.0
icon = ExtResource( 12 )
flat = true

[node name="ProgressSlider" parent="TextureRect/ScrollContainer/VBoxContainer/Sound/Music" instance=ExtResource( 5 )]
margin_left = 84.0
margin_top = 0.0
margin_right = 768.0
margin_bottom = 80.0
min_value = -40.0
max_value = 0.0
step = 1.0
value = -10.0
rounded = true

[node name="Label5" type="Label" parent="TextureRect/ScrollContainer/VBoxContainer/Sound"]
margin_top = 324.0
margin_right = 768.0
margin_bottom = 368.0
theme_type_variation = "MenuItem"
text = "Weather"
align = 1

[node name="Weather" type="HBoxContainer" parent="TextureRect/ScrollContainer/VBoxContainer/Sound"]
margin_top = 372.0
margin_right = 768.0
margin_bottom = 452.0

[node name="BG" type="NinePatchRect" parent="TextureRect/ScrollContainer/VBoxContainer/Sound/Weather"]
modulate = Color( 0.0313726, 1, 0, 1 )
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="WeatherButton" type="Button" parent="TextureRect/ScrollContainer/VBoxContainer/Sound/Weather/BG"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
icon = ExtResource( 13 )
flat = true

[node name="ProgressSlider" parent="TextureRect/ScrollContainer/VBoxContainer/Sound/Weather" instance=ExtResource( 5 )]
margin_left = 84.0
margin_top = 0.0
margin_right = 768.0
margin_bottom = 80.0
min_value = -20.0
max_value = 0.0
step = 1.0
value = -10.0
rounded = true

[node name="Display" type="VBoxContainer" parent="TextureRect/ScrollContainer/VBoxContainer"]
margin_top = 1152.0
margin_right = 768.0
margin_bottom = 1498.0

[node name="HSeparator" type="HSeparator" parent="TextureRect/ScrollContainer/VBoxContainer/Display"]
margin_right = 768.0
margin_bottom = 60.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 60

[node name="Label" type="Label" parent="TextureRect/ScrollContainer/VBoxContainer/Display"]
margin_top = 64.0
margin_right = 768.0
margin_bottom = 130.0
text = "Display"
align = 1

[node name="ScreenButton" type="CheckButton" parent="TextureRect/ScrollContainer/VBoxContainer/Display"]
visible = false
margin_top = 134.0
margin_right = 768.0
margin_bottom = 270.0
pressed = true
text = "Use full screen"
align = 1

[node name="ResolutionOptionButton" type="OptionButton" parent="TextureRect/ScrollContainer/VBoxContainer/Display"]
unique_name_in_owner = true
margin_top = 134.0
margin_right = 768.0
margin_bottom = 206.0
text = "Ratio"

[node name="ShadersButton" type="CheckButton" parent="TextureRect/ScrollContainer/VBoxContainer/Display"]
unique_name_in_owner = true
margin_top = 210.0
margin_right = 768.0
margin_bottom = 346.0
focus_mode = 0
theme_type_variation = "MenuItem"
shortcut_in_tooltip = false
pressed = true
enabled_focus_mode = 0
text = "Shaders"

[node name="Google" type="VBoxContainer" parent="TextureRect/ScrollContainer/VBoxContainer"]
margin_top = 1502.0
margin_right = 768.0
margin_bottom = 1772.0

[node name="HSeparator" type="HSeparator" parent="TextureRect/ScrollContainer/VBoxContainer/Google"]
margin_right = 768.0
margin_bottom = 60.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 60

[node name="Label" type="Label" parent="TextureRect/ScrollContainer/VBoxContainer/Google"]
margin_top = 64.0
margin_right = 768.0
margin_bottom = 130.0
text = "Google play game services"
align = 1

[node name="GPGSAutostartButton" type="CheckButton" parent="TextureRect/ScrollContainer/VBoxContainer/Google"]
unique_name_in_owner = true
margin_top = 134.0
margin_right = 768.0
margin_bottom = 270.0
focus_mode = 0
theme_type_variation = "MenuItem"
shortcut_in_tooltip = false
pressed = true
enabled_focus_mode = 0
text = "Autostart"

[node name="TutorialData" type="VBoxContainer" parent="TextureRect/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 1502.0
margin_right = 768.0
margin_bottom = 1754.0

[node name="HSeparator" type="HSeparator" parent="TextureRect/ScrollContainer/VBoxContainer/TutorialData"]
margin_right = 768.0
margin_bottom = 60.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 60

[node name="Label" type="Label" parent="TextureRect/ScrollContainer/VBoxContainer/TutorialData"]
margin_top = 64.0
margin_right = 768.0
margin_bottom = 120.0
theme_type_variation = "SubMenu"
text = "Tutorials"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/ScrollContainer/VBoxContainer/TutorialData"]
margin_top = 124.0
margin_right = 768.0
margin_bottom = 252.0
custom_constants/separation = 64
alignment = 1

[node name="ResetTutorialButton" type="TextureButton" parent="TextureRect/ScrollContainer/VBoxContainer/TutorialData/HBoxContainer"]
self_modulate = Color( 0.0313726, 1, 0, 1 )
margin_left = 96.0
margin_right = 352.0
margin_bottom = 128.0
texture_normal = ExtResource( 14 )
script = ExtResource( 9 )

[node name="Label" type="Label" parent="TextureRect/ScrollContainer/VBoxContainer/TutorialData/HBoxContainer/ResetTutorialButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Reset"
align = 1
valign = 1

[node name="SkipTutorialButton" type="TextureButton" parent="TextureRect/ScrollContainer/VBoxContainer/TutorialData/HBoxContainer"]
self_modulate = Color( 0.0313726, 1, 0, 1 )
margin_left = 416.0
margin_right = 672.0
margin_bottom = 128.0
texture_normal = ExtResource( 14 )
script = ExtResource( 9 )

[node name="Label" type="Label" parent="TextureRect/ScrollContainer/VBoxContainer/TutorialData/HBoxContainer/SkipTutorialButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Skip All"
align = 1
valign = 1

[node name="DebugExport" type="VBoxContainer" parent="TextureRect/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 1776.0
margin_right = 768.0
margin_bottom = 2000.0

[node name="Data" type="VBoxContainer" parent="TextureRect/ScrollContainer/VBoxContainer/DebugExport"]
margin_right = 768.0
margin_bottom = 224.0

[node name="Label" type="Label" parent="TextureRect/ScrollContainer/VBoxContainer/DebugExport/Data"]
margin_right = 768.0
margin_bottom = 56.0
theme_type_variation = "SubMenu"
text = "Export Debug Data"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/ScrollContainer/VBoxContainer/DebugExport/Data"]
margin_top = 60.0
margin_right = 768.0
margin_bottom = 204.0
custom_constants/separation = 64
alignment = 1

[node name="Save" type="VBoxContainer" parent="TextureRect/ScrollContainer/VBoxContainer/DebugExport/Data/HBoxContainer"]
margin_left = 312.0
margin_right = 456.0
margin_bottom = 144.0

[node name="ExportDebugButton" parent="TextureRect/ScrollContainer/VBoxContainer/DebugExport/Data/HBoxContainer/Save" instance=ExtResource( 7 )]
unique_name_in_owner = true
icon = ExtResource( 8 )

[node name="HSeparator" type="HSeparator" parent="TextureRect/ScrollContainer/VBoxContainer/DebugExport/Data"]
margin_top = 208.0
margin_right = 768.0
margin_bottom = 224.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="MarginBottom" type="Control" parent="TextureRect/ScrollContainer/VBoxContainer"]
margin_top = 2004.0
margin_right = 768.0
margin_bottom = 2132.0
rect_min_size = Vector2( 0, 128 )

[connection signal="pressed" from="TextureRect/ExitButton" to="." method="_on_Exit_Button_pressed"]
[connection signal="pressed" from="TextureRect/ScrollContainer/VBoxContainer/Debug/Data/HBoxContainer/Save/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="TextureRect/ScrollContainer/VBoxContainer/Debug/Data/HBoxContainer/Load/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="toggled" from="TextureRect/ScrollContainer/VBoxContainer/Debug/CheckButton" to="." method="_on_Debug_Button_toggled"]
[connection signal="pressed" from="TextureRect/ScrollContainer/VBoxContainer/Debug/HBoxContainer/DeleteSaveButton" to="." method="_on_DeleteSaveButton_pressed"]
[connection signal="pressed" from="TextureRect/ScrollContainer/VBoxContainer/Debug/HBoxContainer2/PurgeDataButton" to="." method="_on_PurgeDataButton_pressed"]
[connection signal="pressed" from="TextureRect/ScrollContainer/VBoxContainer/Sound/SFX/BG/SFXButton" to="." method="_on_SFXButton_pressed"]
[connection signal="value_changed" from="TextureRect/ScrollContainer/VBoxContainer/Sound/SFX/ProgressSlider" to="." method="_on_SFXProgressSlider_value_changed"]
[connection signal="pressed" from="TextureRect/ScrollContainer/VBoxContainer/Sound/Music/BG/MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="value_changed" from="TextureRect/ScrollContainer/VBoxContainer/Sound/Music/ProgressSlider" to="." method="_on_MusicProgressSlider_value_changed"]
[connection signal="pressed" from="TextureRect/ScrollContainer/VBoxContainer/Sound/Weather/BG/WeatherButton" to="." method="_on_WeatherButton_pressed"]
[connection signal="value_changed" from="TextureRect/ScrollContainer/VBoxContainer/Sound/Weather/ProgressSlider" to="." method="_on_WeatherProgressSlider_value_changed"]
[connection signal="item_selected" from="TextureRect/ScrollContainer/VBoxContainer/Display/ResolutionOptionButton" to="." method="_on_ResolutionOptionButton_item_selected"]
[connection signal="toggled" from="TextureRect/ScrollContainer/VBoxContainer/Display/ShadersButton" to="." method="_on_Shaders_Button_toggled"]
[connection signal="pressed" from="TextureRect/ScrollContainer/VBoxContainer/TutorialData/HBoxContainer/ResetTutorialButton" to="." method="_on_ResetTutorialButton_pressed"]
[connection signal="pressed" from="TextureRect/ScrollContainer/VBoxContainer/TutorialData/HBoxContainer/SkipTutorialButton" to="." method="_on_SkipTutorialButton_pressed"]
[connection signal="pressed" from="TextureRect/ScrollContainer/VBoxContainer/DebugExport/Data/HBoxContainer/Save/ExportDebugButton" to="." method="_on_ExportDebugButton_pressed"]
